fix: issue with black theme in dark mode
The text cannot be seen clearly in dark mode, deleted the font color

Bug: https://pms.uniontech.com/zentao/bug-view-35999.html

--- a/src/app/modules/my-apps/components/refund/refund.component.scss
+++ b/src/app/modules/my-apps/components/refund/refund.component.scss
@@ -97,7 +97,6 @@ button {
     font-size: 12px;
     font-family: SourceHanSansCN-Normal, SourceHanSansCN;
     font-weight: 400;
-    color: rgba(46, 50, 51, 1);
     line-height: 18px;
     padding: 0 15px;
   }
